--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@
   align-items: center;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 10px;
   background-color: rgb(200, 200, 200);
 }
@@ -37,4 +37,4 @@
   width: 3px;
   background-color: rgb(150, 150, 150);
   border-radius: 5px;
-}
+} */
