--- a/client/src/Components/Sub-Components/ListingCard.css
+++ b/client/src/Components/Sub-Components/ListingCard.css
@@ -27,36 +27,74 @@
         height: 100%;
         width: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
         border-radius: 10px;
         padding: 20px;
     }
 
-        .listingCardArrowContainer {
-            position: relative;
-            height: 30px;
-            width: 30px;
-            border-radius: 50%;
-            background-color: rgb(255, 255, 255);
+        .listingCardHeartContainer {
+            height: 20%;
+            width: 100%;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            opacity: 0.9;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: flex-start;
         }
 
-            .fa-solid.fa-chevron-left {
-                font-size: 12px;
-                color: var(--black);
+            .fa-solid.fa-heart.listingCardHeart {
+                transition: 0.1s linear;
+                font-size: 24px;
+                opacity: 0.8;
+                cursor: pointer;
             }
 
-            .fa-solid.fa-chevron-right {
-                font-size: 12px;
-                color: var(--black);
+            .fa-solid.fa-heart.listingCardHeart:hover {
+                transition: 0.1s linear;
+                color: var(--pink);
             }
 
+        .listingCardArrowsContainer {
+            height: 60%;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+            .listingCardArrowContainer {
+                position: relative;
+                height: 30px;
+                width: 30px;
+                border-radius: 50%;
+                background-color: rgb(255, 255, 255);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                opacity: 0.9;
+            }
+
+                .fa-solid.fa-chevron-left {
+                    font-size: 12px;
+                    color: var(--black);
+                }
+
+                .fa-solid.fa-chevron-right {
+                    font-size: 12px;
+                    color: var(--black);
+                }
+
+        .listingCardCarouselNumberContainer {
+            height: 20%;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: flex-end;
+        }
 
     .listingCardInfoContainer {
         height: 30%;
