--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter';
-  color: white;
-  letter-spacing: 0px;
+  color: #222222;
+  letter-spacing: 0.3px;
   line-height: 1.25;
   font-weight: 400;
   text-decoration: none;
