--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -31,9 +31,7 @@
     top: 0;
     background-color: white;
     z-index: 100;
-    padding: 0 40px;
 }
-
 
     .homeHeader1Container {
         height: 80px;
@@ -45,6 +43,17 @@
         border-bottom: 1.5px solid rgba(100, 100, 100, 0.1);
         padding: 0 40px;
     }
+
+        .homeHeader1Container2 {
+            height: 80px;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1.5px solid rgba(100, 100, 100, 0.1);
+            padding: 0 80px;
+        }
 
         .homeHeader1LogoContainer {
             height: 100%;
