--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -277,26 +277,65 @@
                 padding-bottom: 21px;
             }
 
-            .listingBodyMainRightHostedRightImage {
-                min-height: 58px;
-                min-width: 58px;
-                height: 58px;
-                width: 58px;
-                border-radius: 50%;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-            }
+                .listingBodyMainRightHostedRightImage {
+                    min-height: 58px;
+                    min-width: 58px;
+                    height: 58px;
+                    width: 58px;
+                    border-radius: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                }
 
         .listingBodyMainLeftCheckContainer {
-            height: 250px;
+            height: 150px;
             width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: flex-start;
         }
+
+            .listingBodyMainLeftCheckSubContainer {
+                height: 50px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+                .listingBodyMainLeftCheckSubLeftContainer {
+                    height: 100%;
+                    min-width: 40px;
+                    width: 40px;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+
+                    .fa-solid.fa-door-closed.listingBodyMainLeftCheckSubLeftDoor {
+                        font-size: 20px;
+                    }
+
+                    .fa-solid.fa-calendar.listingBodyMainLeftCheckSubLeftCalendar {
+                        font-size: 20px;
+                    }
+
+                .listingBodyMainLeftCheckSubRightContainer {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+
+                    .listingBodyMainLeftCheckSubRightText {
+                        font-size: 15px;
+                        font-weight: bold;
+                    }
 
         .listingBodyMainLeftAircoverContainer {
             height: 200px;
