--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -380,24 +380,107 @@
                 }
 
         .listingBodyMainLeftDescriptionContainer {
-            height: 250px;
+            height: 225px;
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
             border-bottom: 1px solid rgba(100, 100, 100, 0.3);
+            overflow: hidden;
         }
 
+            .listingMainBodyDescriptionText {
+                font-size: 14px;
+            }
+
         .listingBodyMainLeftAmenitiesContainer {
-            height: 400px;
+            height: 350px;
             width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: flex-start;
             border-bottom: 1px solid rgba(100, 100, 100, 0.3);
+            padding: 20px 0;
         }
+
+            .listingBodyMainLeftAmenitiesTitleContainer {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+                .listingBodyMainLeftAmenitiesTitleText {
+                    font-size: 22px;
+                    font-weight: bold;
+                }
+
+            .listingBodyMainLeftAmenitiesListContainer {
+                height: 80%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+                .listingBodyMainLeftAmenitiesListLeftContainer {
+                    height: 100%;
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: flex-start;
+                }
+
+                    .listingBodyMainLeftAmenityContainer {
+                        height: 20%;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                    }
+
+                        .listingBodyMainLeftAmenityLeftContainer {
+                            height: 100%;
+                            width: 20%;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                            .listingBodyMainLeftAmenity {
+                                font-size: 20px;
+                                margin-bottom: 2px;
+                            }
+
+                            .listingBodyMainLeftAmenityText {
+                                font-size: 16px;
+                            }
+
+                        .listingBodyMainLeftAmenityRightContainer {
+                            height: 100%;
+                            width: 80%;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: flex-start;
+                            align-items: center;
+                        }
+
+                .listingBodyMainLeftAmenitiesListRightContainer {
+                    height: 100%;
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: flex-start;
+                }
 
         .listingBodyMainLeftCalendarContainer {
             height: 600px;
