--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -483,11 +483,11 @@
                 }
 
         .listingBodyMainLeftCalendarContainer {
-            height: 600px;
+            height: 550px;
             width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: flex-start;
             border-bottom: 1px solid rgba(100, 100, 100, 0.3);
         }
@@ -507,7 +507,7 @@
                 }
 
             .listingBodyMainLeftCalendarBodyContainer {
-                height: 70%;
+                height: 60%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
@@ -516,7 +516,7 @@
             }
 
             .listingBodyMainLeftCalendarFooterContainer {
-                height: 10%;
+                height: 20%;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
